# bookstore-backend

./: .env.example  .gitignore  Cargo.toml
assets/: db.sql  schema.sql
migrations/: 20251112161442_initial_schema.sql
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/http/: actix_adapter.rs  axum_adapter.rs  mod.rs
src/application/: application_errors.rs  mod.rs
src/application/dtos/: auth_dto.rs  book_dto.rs  branch_dto.rs  category_dto.rs  inventory_dto.rs  mod.rs  order_dto.rs  payment_dto.rs  permission_dto.rs  receipt_dto.rs  role_dto.rs  sale_dto.rs  user_dto.rs
src/application/services/: auth_service.rs  branch_service.rs  inventory_adjust_service.rs  inventory_service.rs  mod.rs  order_service.rs  payment_service.rs  permission_service.rs  role_service.rs  sale_service.rs  user_service.rs
src/application/use_cases/: auth_usecase.rs  mod.rs  role_usecase.rs
src/config/: config_loader.rs  config_model.rs
src/domain/: domain_errors.rs  mod.rs
src/domain/entities/: book_image.rs  branch.rs  category.rs  mod.rs  order.rs  payment.rs  permission.rs  receipt.rs  refresh_token.rs  role.rs  sale.rs  user.rs
src/domain/repositories/: book_image_repository.rs  book_repository.rs  branch_repository.rs  category_repository.rs  inventory_repository.rs  mod.rs  order_repository.rs  password_repository.rs  payment_repository.rs  permission_repository.rs  receipt_repository.rs  role_repository.rs  sale_repository.rs  token_repository.rs  user_repository.rs
src/domain/value_objects/: isbn13.rs  mod.rs  money.rs
src/infrastructure/: config.rs  config_loader.rs  config_model.rs  jwt.rs  mod.rs
src/infrastructure/argon2_hashing/: mod.rs
src/infrastructure/axum_http/: cookie_utils.rs  mod.rs
src/infrastructure/jwt_authentication/: mod.rs
src/infrastructure/redis/: mod.rs  redis_connector.rs  (+1 more)
(+34 files in other folders)
